[project]
name = "github_actions.common"
version = "v1"
description = "Common helpers and utilities for GitHub Actions used across edenlab repositories"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Edenlabllc" }]
maintainers = [
  { name = "@anovikov-el" },
  { name = "@apanasiuk-el" }
]
keywords = [
  "python", "github", "actions",
  "ci", "cd", "devops", "infrastructure",
  "aws", "azure", "gcp", "onprem",
  "rmk",
]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "requests~=2.32.3",
  "GitPython~=3.1.44",
  "PyGithub==2.5.0",
  "slack_sdk~=3.34.0",
  "packaging~=24.2",
  "utils~=1.0.2",
  "boto3~=1.37.18",
  "botocore~=1.37.18"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
